Replace pyinstrument with joulehunter

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
         language: node
         pass_filenames: false
 
-exclude: ^pyinstrument/renderers/html_resources/app.js$|^pyinstrument/vendor
+exclude: ^joulehunter/renderers/html_resources/app.js$|^joulehunter/vendor
