--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include README.md
 include LICENSE
-recursive-include pyinstrument *.js
+recursive-include joulehunter *.js
 recursive-include html_renderer *.html *.json *.js *.ts *.vue *.css *.png
 prune html_renderer/node_modules
 prune html_renderer/dist
