add : publish process

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,22 @@ test = pytest
 [tool:pytest]
 testpaths = test
 
-[flake8]
-per-file-ignores =
-     path/to/file.py: F821
+[metadata]
+name = joulehunter
+author = chakib belgaid
+author_email = chakib.belgaid@gmail.com
+description =  detect where your code consumes energy the most so you can optimize those functions 
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/powerapi-ng/joulehunter
+project_urls =
+    Bug Tracker = https://github.com/powerapi-ng/joulehunter/issues
+classifiers =
+    "Environment :: Console",
+    "Environment :: Web Environment",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: POSIX",
+    "Topic :: Software Development :: Debuggers",
+    "Topic :: Software Development :: Testing",
+    
