--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,11 @@ url = https://github.com/powerapi-ng/joulehunter
 project_urls =
     Bug Tracker = https://github.com/powerapi-ng/joulehunter/issues
 classifiers =
-    "Environment :: Console",
-    "Environment :: Web Environment",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: BSD License",
-    "Operating System :: POSIX",
-    "Topic :: Software Development :: Debuggers",
-    "Topic :: Software Development :: Testing",
+    Environment :: Console,
+    Environment :: Web Environment,
+    Intended Audience :: Developers,
+    License :: OSI Approved :: BSD License,
+    Operating System :: POSIX,
+    Topic :: Software Development :: Debuggers,
+    Topic :: Software Development :: Testing,
     
