--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -6,39 +6,42 @@ on:
         tags: -v*
 
 jobs:
-    build-n-publish:
-        name: Build and publish Publish JouleHunter to PyPI and TestPyPI
+    build_sdist:
+        name: Build source distribution
         runs-on: ubuntu-latest
-        strategy:
-            fail-fast: false
-            matrix:
-                python-version: [3.7, 3.8, 3.9]
-
         steps:
             - uses: actions/checkout@v2
-            - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
-            - name: Install pypa/build
-              run: >-
-                  python -m
-                  pip install
-                  build
-                  --user
-            - name: Build a binary wheel and a source tarball
-              run: >-
-                  python -m
-                  build
-                  --sdist
-                  --outdir dist/
-                  .
-            - name: Publish distribution 📦 to Test PyPI
-              uses: pypa/gh-action-pypi-publish@master
-              with:
-                  password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-                  repository_url: https://test.pypi.org/legacy/
 
-            - name: Publish distribution 📦 to PyPI
-              if: startsWith(github.ref, 'refs/tags')
-              uses: pypa/gh-action-pypi-publish@master
+            - uses: actions/setup-python@v2
+              name: Install Python
               with:
-                  password: ${{ secrets.PYPI_API_TOKEN }}
+                  python-version: "3.8"
+
+            - name: Build sdist
+              run: python setup.py sdist
+
+            - uses: actions/upload-artifact@v2
+              with:
+                  path: dist/*.tar.gz
+
+publish:
+    name: Build and publish Publish JouleHunter to PyPI and TestPyPI
+    runs-on: ubuntu-latest
+    needs: [build_sdist]
+    steps:
+        - uses: actions/download-artifact@v2
+          with:
+              name: artifact
+              path: dist
+
+        - name: Publish distribution 📦 to Test PyPI
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+              password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+              repository_url: https://test.pypi.org/legacy/
+
+        - name: Publish distribution 📦 to PyPI
+          if: startsWith(github.ref, 'refs/tags')
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+              password: ${{ secrets.PYPI_API_TOKEN }}
