--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -1,4 +1,4 @@
-name: Publish JouleHunter to PyPI and TestPyPI
+name: Publish JouleHunter to PyPI 
 
 on:
     release:
@@ -10,7 +10,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-
             - uses: actions/setup-python@v2
               name: Install Python
               with:
@@ -18,7 +17,6 @@ jobs:
 
             - name: Build sdist
               run: python setup.py sdist
-
             - uses: actions/upload-artifact@v2
               with:
                   path: dist/*.tar.gz
@@ -32,6 +30,7 @@ jobs:
               with:
                   name: artifact
                   path: dist
+
         - name: Publish distribution 📦 to PyPI
           uses: pypa/gh-action-pypi-publish@master
           with:
