--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,27 +1,37 @@
-name: Upload JouleHunter to Pypy
+name: Upload JouleHunter to PypI
 
 on:
     release:
         types: [published]
 
 jobs:
-    deploy:
+    build_sdist:
+        name: Build source distribution
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v2
-            - name: Set up Python
-              uses: actions/setup-python@v2
+            - uses: actions/setup-python@v2
+              name: Install Python
               with:
-                  python-version: "3.7"
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install build
-            - name: Build package
-              run: python -m build
-            - name: Publish package
+                  python-version: "3.8"
+
+            - name: Build sdist
+              run: python setup.py sdist
+            - uses: actions/upload-artifact@v2
+              with:
+                  path: dist/*.tar.gz
+
+    publish:
+        name: Build and publish Publish JouleHunter to PyPI
+        runs-on: ubuntu-latest
+        needs: [build_sdist]
+        steps:
+            - uses: actions/download-artifact@v2
+              with:
+                  name: artifact
+                  path: dist
+
+            - name: Publish distribution 📦 to PyPI
               uses: pypa/gh-action-pypi-publish@master
               with:
-                  user: __token__
                   password: ${{ secrets.PYPI_API_TOKEN }}
